--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,15 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "mongoose": "^8.10.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
