Fix: CI/CD stellt sicher, dass Supertest installiert ist

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd backend
-          npm install
+          npm ci  # Stellt sicher, dass ALLE devDependencies installiert werden
       - name: Run tests
         run: |
           cd backend
