--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "mongoose": "^8.10.0"
   },
   "devDependencies": {
+    "eslint": "^9.21.0",
     "jest": "^29.7.0",
     "supertest": "^7.0.0"
   }
