--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,8 @@
   "scripts": {
     "start": "node server.js",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx",
-    "audit": "npm audit",
-    "build": "echo 'No build step needed for backend' && exit 0"
+    "lint": "eslint .",
+    "audit": "npm audit --json"
   },
   "dependencies": {
     "cors": "^2.8.5",
