--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,8 @@
     "dev": "vite",
     "build": "vite build",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "audit": "npm audit"
+    "lint": "eslint .",
+    "audit": "npm audit --json"
   },
   "eslintConfig": {
     "extends": [
