Fix: Lint-, Audit- und Build-Skripte korrigiert

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "start": "node server.js",
     "test": "jest",
-    "lint": "eslint .",
-    "audit": "npm audit --json"
+    "lint": "eslint . --ext .js,.jsx",
+    "audit": "npm audit --json",
+    "build": "echo 'No build step for backend'"
   },
   "dependencies": {
     "cors": "^2.8.5",
